Regression: Outliner: Assert in outliner_collect_objects_to_delete #109590

Closed
opened 2023-07-01 17:19:23 +02:00 by Iliya Katueshenock · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-01 09:54, hash: f33d7bb598ce
Worked: (newest version of Blender that worked as expected)

Short description of error
See attached stack trace file.

Exact steps for others to reproduce the error
Debug build:

  1. Default scene.
  2. Select Collection in outliner. Delete it.
  3. Select Cube in outliner. Delete it.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-01 09:54, hash: `f33d7bb598ce` Worked: (newest version of Blender that worked as expected) **Short description of error** See attached stack trace file. **Exact steps for others to reproduce the error** Debug build: 1. Default scene. 2. Select `Collection` in outliner. Delete it. 3. Select `Cube` in outliner. Delete it.
Iliya Katueshenock added the
Type
Report
Priority
Normal
Module
Core
Status
Confirmed
labels 2023-07-01 17:19:24 +02:00
Member

I can confirm.
This was added in 188f7585a1
I guess we could either remove or move the assert statement inside the if() block.
@mont29 ^

I can confirm. This was added in 188f7585a1838387c278780d743e5540a0c75a2c I guess we could either remove or move the assert statement inside the `if()` block. @mont29 ^
Pratik Borhade added
Module
User Interface
and removed
Module
Core
labels 2023-07-03 07:20:16 +02:00
Iliya Katueshenock changed title from Outliner: Assert in outliner_collect_objects_to_delete to Regression: Outliner: Assert in outliner_collect_objects_to_delete 2023-07-03 10:57:50 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-03 11:19:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109590
No description provided.