Fix #109590: Outliner: Assert in outliner_collect_objects_to_delete.